# motorplus

./: .gitignore  docker-compose.yml  pyproject.toml
backend/: .gitignore  README.md  manage.py  package-lock.json  package.json  pyproject.toml
backend/backup/: seed_db.sql
backend/motorplus/: asgi.py  settings.py  urls.py  wsgi.py
backend/prisma/: schema.prisma  seed.ts
backend/prisma/migrations/20220121092950_change_name_fields/: migration.sql
backend/prisma/migrations/20220121094212_add_ids_to_bike/: migration.sql
backend/src/: app.controller.spec.ts  app.controller.ts  app.module.ts  deep-omit.interceptor.spec.ts  error-handling.interceptor.spec.ts  error-handling.interceptor.ts  main.ts  omit-deep.interceptor.ts  prisma.filter.spec.ts  prisma.filter.ts
backend/src/auth/: auth.controller.spec.ts  auth.controller.ts  auth.module.ts  auth.service.spec.ts  auth.service.ts  local.strategy.ts
backend/src/auth/dto/: index.ts
backend/src/auth/strategies/: jwt.strategy.ts  local.strategy.ts
backend/src/bikes/: bikes.controller.ts  bikes.module.ts  bikes.service.ts
backend/src/configs/: auth.config.ts
backend/src/prisma/: prisma.service.ts
backend/src/users/: users.controller.spec.ts  users.controller.ts  users.module.ts  users.service.ts
backend/src/users/dto/: login-user.dto.ts
frontend/: .env  package-lock.json  package.json  tsconfig.json
frontend/components/: example.tsx  layout.tsx  listItems.tsx  menu-appbar.tsx  navbar.tsx  snackbar-alert.tsx
frontend/lib/: prisma.ts
frontend/motorplus/: package-lock.json  package.json
(+36 files in other folders)
