[tool.poetry]
name = "motorplus"
version = "0.1.0"
description = ""
authors = ["Jeep Kiddee <nutthawut.ki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.7"
djangorestframework = "^3.12.4"
drf-yasg = "^1.20.0"
django-environ = "^0.8.1"
psycopg2 = "^2.9.2"
django-extensions = "^3.1.5"
pytest-django = "^4.5.2"
django-storages = "^1.12.3"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
